styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

/* Variables */
:root {
	--mint-green: rgba(142, 216, 191, 1); /* Landing page background */
	--clay: rgba(96, 88, 88, 1); /* Menu background colour */
	--coal: rgba(53, 49, 49, 1); /* Button colour */
	--snow: rgba(244, 243, 241, 0.94); /* Text colour */
	--ash: rgba(238, 238, 238, 1); /* Min beställning background colour */
	--alert: rgba(235, 87, 87, 1); /* Cart alert */
}

/* Base */
* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	font-family: "Fira Sans", sans-serif;
}

body {
	font-family: "Fira Sans", sans-serif;
	color: var(--snow);

	background-color: var(--mint-green);
	background-image: url(../res/background.png);
}

a {
	text-decoration: none;
	color: var(--snow);
}

/* Utils */
.d-none {
	display: none;
}

/* HEADER */
.header {
	padding: 1rem;
	display: flex;
	justify-content: space-between;

	/* Hambuger menu */
	.header__burger-label {
		width: 1.5rem;
		aspect-ratio: 1;
		position: fixed;
		bottom: 1rem;
		right: 1rem;
		display: flex;
		justify-content: center;
		align-items: center;
		place-content: center;
		z-index: 999;
		cursor: pointer;
		padding: 2.5rem;
		background-color: var(--clay);
		border-radius: 30%;
	}

	.header__burger-label--top-left {
		top: 1rem;
		left: 1rem;
		right: unset;
		bottom: unset;
	}

	.header__burger-label > .header__burger-btn,
	.header__burger-label > .header__burger-btn::before,
	.header__burger-label > .header__burger-btn::after {
		width: 4rem;
		height: 0.5rem;
		position: absolute;
		background-color: var(--snow);
		border-radius: 1rem;
		box-shadow: 0 5px 2px rgba(0, 0, 0, 0.3);
	}
	.header__burger-label > .header__burger-btn::before {
		content: "";
		top: 1rem;
	}
	.header__burger-label > .header__burger-btn::after {
		content: "";
		top: -1rem;
	}

	.header__burger {
		display: none;
	}

	.header__burger:checked ~ .header__burger-label > .header__burger-btn,
	.header__burger:checked
		~ .header__burger-label
		> .header__burger-btn::before,
	.header__burger:checked
		~ .header__burger-label
		> .header__burger-btn::after {
		box-shadow: none;
		width: 4rem;
		height: 0.35rem;
	}

	.header__burger:checked ~ .header__burger-label > .header__burger-btn {
		transform: rotate(45deg);
		box-shadow: 0 5px 2px rgba(0, 0, 0, 0.4);
	}

	.header__burger:checked
		~ .header__burger-label
		> .header__burger-btn::before {
		transform: rotate(0deg);
		top: 0;
	}

	.header__burger:checked
		~ .header__burger-label
		> .header__burger-btn::after {
		transform: rotate(90deg);
		top: 0;
		box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.4);
	}

	.header__burger:checked ~ .nav-bar {
		display: flex;
		transform: translateX(0);

		.nav-bar__list {
			.nav-bar__item {
				transform: translateX(0);
				opacity: 1;
			}
		}
	}

	.nav-bar {
		position: fixed;
		inset: 0;
		z-index: 10;
		width: 100%;
		height: 100vh;
		background: var(--coal);
		transform: translateX(100%);
		padding: 2.5rem 0;
		margin: 0;
		gap: 3rem;

		.nav-bar__list {
			display: flex;
			flex-direction: column;
			width: 100%;
			padding: 0;
			margin: 0;
			gap: 2rem;
			justify-content: space-evenly;
			align-items: flex-start;
			padding-left: 2rem;

			.nav-bar__item {
				border-bottom: 1px solid var(--mint-green);
				display: flex;
				transform: translateX(2rem);
				opacity: 0;
				transition: all 0.5s ease;
				margin: 0;

				.nav-bar__link {
					width: 100%;
					padding: 0.25rem;
					color: var(--snow);
					text-decoration: none;
					font-size: 3rem;
				}
			}
		}
	}

	.header__logo-link {
		text-decoration: none;

		.header__logo-img {
		}
	}

	.header__cart-link {
		position: relative;
		margin-left: auto;
		text-decoration: none;
		display: grid;
		place-items: center;
		width: 64px;
		height: 64px;
		border-radius: 4px;
		background-color: var(--ash);

		.header__cart-img {
			width: 75%;
		}

		.header__cart-count {
			line-height: 1.5;
			position: absolute;
			top: -8px;
			right: -8px;
			background-color: var(--alert);
			width: 24px;
			height: 24px;
			border-radius: 50%;
			text-align: center;
		}
	}
}

/* FOODTRUCK */
.foodtruck {
	width: 100%;
	padding: 1rem;

	.foodtruck__title {
		text-align: center;
		margin-bottom: 2rem;
		border-radius: 8px;
		font-size: 2rem;
		background-color: var(--ash);
		color: var(--coal);
		padding: 0.5rem 0;
		font: 700;
	}

	.foodtruck__list {
		width: 100%;
		list-style: none;
		display: flex;
		flex-direction: column;
		gap: 1rem;

		.foodtruck__list-item {
			.foodtruck__card {
				display: flex;
				background-color: var(--ash);
				border-radius: 8px;
				overflow: hidden;
				cursor: pointer;

				.foodtruck__card-figure {
					position: relative;
					.foodtruck__card-img {
						width: 110px;
						height: 100%;
					}

					.foodtruck__card-fig-caption {
						text-align: center;
						position: absolute;
						top: 50%;
						left: 50%;
						transform: translate(-50%, -50%);
						font-size: 1.25rem;
						font-weight: 600;
						line-height: 1.2;
						letter-spacing: 2px;
					}
				}

				.foodtruck__card-info-group {
					padding: 0.5rem;
					display: flex;
					flex-direction: column;
					justify-content: space-between;
					.foodtruck__card-adress {
						color: var(--coal);
						font-size: 1.25rem;
						font-weight: 500;
					}

					.foodtruck__card-opening-hours {
						color: var(--coal);
						font-size: 1rem;
						font-weight: 400;
					}
				}
			}
		}
	}
}
/* ... */

